@@ -1,25 +1,25 @@
-1,CS,Chromobacterium Subtsugae,360,2,1025DB,24,80,-1,-1,5.5-7.2,-1,-1
-2,PA,Priestia Aryabhattai,360,2,1025DB,48,80,70,-1,6.5-7.5,5.0-6.5,-1 
-3,BTK,Bacillus Thuringiensis Kurstaki,360,2,1025DB,48,80,70,-1,6.5-7.5,5.0-6.5,-1
-4,BTA,Bacillus Thuringiensis Aizawai,360,2,1025DB,48,80,70,-1,6.5-7.5,5.0-6.5,-1
-5,AB,Azospirillum Brasilense,360,2,1235iDB,48,80,80,-1,6.5-7.5,5.0-6.5,-1 
-6,BD,Bradyrhizobium Diazoefficiens,360,2,1235iDB,48,80,80,-1,6.5-7.5,5.0-6.5,-1
-7,PF,Pseudomonas Fluorescens,360,2,1025DB,24,80,-1,-1,5.5-7.2,-1,-1
-8,BF,Bacillus Firmus,360,2,1025DB,48,80,70,-1,6.5-7.5,5.0-6.5,-1
-9,BJ,Bradyrhizobium Japonicum,360,2,1235iDB,48,80,80,-1,6.5-7.5,5.0-6.5,-1
-10,BP,Bacillus Pumilus,360,2,1025DB,48,80,70,-1,6.5-7.5,5.5-6.5,-1
-11,BMG,Bacillus Megaterium,360,2,1025DB,48,80,70,-1,6.5-7.5,5.0-6.5,-1
-12,BL,Bacillus Licheniformis,360,2,1025DB,48,80,70,-1,6.5-7.5,5.0-6.5,-1
-13,BA,Bacillus Amyloliquefaciens,360,2, 1025DB, 48, 80, 70, -1, 6.5-7.5, 5.0-6.5, -1
-14,BV,Bacillus Velezensis,360,2,1025DB, 48, 80, 70, -1, 6.5-7.5, 5.0-6.5, -1
-15,RT,Rhizobium Tropicci,360,2,1235iDB, 48, 80, 70, -1, 6.5-7.5, 5.0-6.5, -1
-16,BS,Bacillus Subtilis,360,2,1025DB, 48, 80, 70, -1, 6.5-7.5, 5.0-6.5, -1
-17,BMT,Bacillus Methylotropicus,360,2, 1025DB, 48, 80, 70, -1, 6.5-7.5, 5.0-6.5, -1
-18,PC,Pochonia Chlamydosporia,168,2, 1035fDB, 72, 75, 75, 65, 4.0-5.0, 3.0-5.0, 3.0-5.0 
-19,TH,Trichoderma Harzianum,168,2, 1035fDB, 72, 75, 75, 65, 4.0-5.0, 3.0-5.0, 3.0-5.0
-20,TA,Trichoderma Asperellum,168,2, 1035fDB, 72, 75, 75, 65, 4.0-5.0, 3.0-5.0, 3.0-5.0
-21,IF,Isaria Fumosorosea,168,2, 1035fDB, 72, 75, 75, 65, 4.0-5.0, 3.0-5.0, 3.0-5.0
-22,BB,Beauveria Bassiana,168,2, 1035fDB, 72, 75, 75, 65, 4.0-5.0, 3.0-5.0, 3.0-5.0
-23,PL,Purpureocillium Lilacinum,168,2,1035fDB, 72, 75, 75, 65, 4.0-5.0, 3.0-5.0, 3.0-5.0
-24,MA,Metarhizium Anisopliae,168,2,1035fDB, 72, 75, 75, 65, 4.0-5.0, 3.0-5.0, 3.0-5.0
+1,CS,Chromobacterium Subtsugae,360,2,1025DB,24,80,-1,-1,5-7.2,-1,-1
+2,PA,Priestia Aryabhattai,360,2,1025DB,48,80,70,-1,5-7.2,5-7.2,-1 
+3,BTK,Bacillus Thuringiensis Kurstaki,360,2,1025DB,48,80,70,-1,5-7.2,5-7.2,-1
+4,BTA,Bacillus Thuringiensis Aizawai,360,2,1025DB,48,80,70,-1,5-7.2,5-7.2,-1
+5,AB,Azospirillum Brasilense,360,2,1235iDB,48,80,80,-1,5-7.2,5-7.2,-1 
+6,BD,Bradyrhizobium Diazoefficiens,360,2,1235iDB,48,80,80,-1,5-7.2,5-7.2,-1
+7,PF,Pseudomonas Fluorescens,360,2,1025DB,24,80,-1,-1,5-7.2,-1,-1
+8,BF,Bacillus Firmus,360,2,1025DB,48,80,70,-1,5-7.2,5-7.2,-1
+9,BJ,Bradyrhizobium Japonicum,360,2,1235iDB,48,80,80,-1,5-7.2,5-7.2,-1
+10,BP,Bacillus Pumilus,360,2,1025DB,48,80,70,-1,5-7.2,5-7.2,-1
+11,BMG,Bacillus Megaterium,360,2,1025DB,48,80,70,-1,5-7.2,5-7.2,-1
+12,BL,Bacillus Licheniformis,360,2,1025DB,48,80,70,-1,5-7.2,5-7.2,-1
+13,BA,Bacillus Amyloliquefaciens,360,2, 1025DB, 48, 80, 70, -1,5-7.2, 5-7.2, -1
+14,BV,Bacillus Velezensis,360,2,1025DB, 48, 80, 70, -1, 5-7.2, 5-7.2, -1
+15,RT,Rhizobium Tropicci,360,2,1235iDB, 48, 80, 70, -1, 5-7.2, 5-7.2, -1
+16,BS,Bacillus Subtilis,360,2,1025DB, 48, 80, 70, -1, 5-7.2, 5-7.2, -1
+17,BMT,Bacillus Methylotropicus,360,2, 1025DB, 48, 80, 70, -1, 5-7.2, 5-7.2, -1
+18,PC,Pochonia Chlamydosporia,168,2, 1035fDB, 72, 75, 75, 65, 3.5-5.5, 3.5-5.5, 3.5-5.5 
+19,TH,Trichoderma Harzianum,168,2, 1035fDB, 72, 75, 75, 65, 3.5-5.5, 3.5-5.5, 3.5-5.5
+20,TA,Trichoderma Asperellum,168,2, 1035fDB, 72, 75, 75, 65, 3.5-5.5, 3.5-5.5, 3.5-5.5
+21,IF,Isaria Fumosorosea,168,2, 1035fDB, 72, 75, 75, 65, 3.5-5.5, 3.5-5.5, 3.5-5.5
+22,BB,Beauveria Bassiana,168,2, 1035fDB, 72, 75, 75, 65, 3.5-5.5, 3.5-5.5, 3.5-5.5
+23,PL,Purpureocillium Lilacinum,168,2,1035fDB, 72, 75, 75, 65, 3.5-5.5, 3.5-5.5, 3.5-5.5
+24,MA,Metarhizium Anisopliae,168,2,1035fDB, 72, 75, 75, 65, 3.5-5.5, 3.5-5.5, 3.5-5.5
 999,EMPTY,Sem Organismo,0,0,0,0,0,-1,-1,-1,-1,-1
